<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.brandi.discoevents.TagEventList"
    android:id="@+id/layoutTagList"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:weightSum="5">

    <TextView
        android:id="@+id/DataText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:text="Selected Events:"
        android:textSize="30dp" />

    <ListView
        android:id="@+id/EventData_List"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.75" />

    <LinearLayout
        android:id="@+id/LinearBottomContentBookmark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight=".75"
        android:background="@color/lightBackground"
        android:backgroundTint="@color/lightBackground"
        android:orientation="vertical">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:background="?android:attr/windowBackground"
            android:backgroundTint="@color/lightBackground"
            app:menu="@menu/navigation" />

    </LinearLayout>

</LinearLayout>