<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brandi.discoevents.MainActivity">

    <LinearLayout
        android:id="@+id/LinearTagSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/windowBackground"
        android:backgroundTint="@color/lightBackground"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTabSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight=".7"
            android:text="Would you like to search by tag?"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSearchTabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight=".1"
            android:onClick="sendMessage"
            android:text="Search" />
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/lightBackground" />

    <LinearLayout
        android:id="@+id/LinearBottomContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight=".2"
        android:background="@color/lightBackground"
        android:backgroundTint="@color/lightBackground"
        android:orientation="vertical">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:background="?android:attr/windowBackground"
            android:backgroundTint="@color/lightBackground"
            app:menu="@menu/navigation" />
    </LinearLayout>

</LinearLayout>
