<resources>
    <string name="app_name">DiscoEvents</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">All Events</string>
    <string name="title_notifications">Notifications</string>
</resources>
