<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:backgroundTint="@android:color/darker_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Events on "
        android:textSize="25sp" />

    <ListView
        android:id="@+id/listPopWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>